--- a/app/state-manager/router-controller.html
+++ b/app/state-manager/router-controller.html
@@ -9,12 +9,14 @@
 <body>
 <div class="container">
     <header>
-        <h1>Controllers in UI Router</h1>
+        <h1>Controllers and Resolve in UI Router</h1>
         <nav>
             <ul>
                 <li><a href="#/home">Home</a></li>
                 <li><a href="" ui-sref="contact">Contact</a></li>
                 <li><a href="" ui-sref="about">About</a></li>
+                <li><a href="" ui-sref="link1({name:'Link'})">Link1</a></li>
+                <li><a href="" ui-sref="resolve">Resolve</a></li>
             </ul>
         </nav>
     </header>
