Ui Router Resolve

--- a/app/state-manager/router-controller.html
+++ b/app/state-manager/router-controller.html
@@ -32,12 +32,13 @@
 
 
 
-
+s
 
 
 <script type="text/javascript" src="../../bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script type="text/javascript" src="ctrl.js"></script>
+<script type="text/javascript" src="services/router.service.js"></script>
 <script type="text/javascript" src="controllers/router.controllers.js"></script>
 </body>
 
