--- a/app/state-manager/activate.html
+++ b/app/state-manager/activate.html
@@ -9,6 +9,9 @@
 <body>
 <div class="container" ng-controller="ActivateCtrl">
     <header>
+        <a href="index.html" class="home">
+            <img src="../images/home.svg" alt="Home"/>
+        </a>
         <h1>Activating State</h1>
         <nav>
             <ul>
