State parameters through params

--- a/app/state-manager/router-controller.html
+++ b/app/state-manager/router-controller.html
@@ -16,6 +16,7 @@
                 <li><a href="" ui-sref="contact">Contact</a></li>
                 <li><a href="" ui-sref="about">About</a></li>
                 <li><a href="" ui-sref="link1({name:'Link'})">Link1</a></li>
+                <li><a href="" ui-sref="link2({param1: 'Parameters by params config'})">Link2</a></li>
                 <li><a href="" ui-sref="resolve">Resolve</a></li>
             </ul>
         </nav>
