Custom State Data

--- a/app/state-manager/index.html
+++ b/app/state-manager/index.html
@@ -33,7 +33,10 @@
                 <a href="activate.html">Activate a State</a>
             </div>
             <div class="nav-link">
-                <a href="router-controller.html">Define Controller for a State</a>
+                <a href="router-controller.html">Define Controller and Resolve Promise for a State</a>
+            </div>
+            <div class="nav-link">
+                <a href="custom-data.html">Custom Data</a>
             </div>
         </div>
         
