Nested State and Views

--- a/app/nested-state-views/state-helper.html
+++ b/app/nested-state-views/state-helper.html
@@ -18,22 +18,18 @@
                 <li><a href="#/home">Home</a></li>
                 <li><a href="#/home/child1">Child1</a></li>
                 <li><a ui-sref="home.child2">Child2</a></li>
-                <li><a ui-sref="child3">Child3</a></li>
-                <li><a ui-sref="home.child4">Child4</a></li>
+                <li><a href="/child3">Child3</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="main">
         <div class="info">
-            <p>State is activated by clicking any of the above Navigation link.</p>
-            <p>When a state is activated, its templates are automatically inserted into the ui-view of its parent state's template, Here the Parent state is Home and child1, Child1, Child2 and Child3 are child states</p>
+            <p>State is activated by clicking any of the Navigation link(Home, Contact or About)</p>
+            <p>When a state is activated, its templates are automatically inserted into the ui-view of its parent state's template, since no parent state is defined, default parent state is index.html</p>
         </div>
         <div class="view" ui-view>
             <i>View will be loaded Here by clicking any navigation link above(Home, Contact or about).</i>
-        </div>
-        <div class="nav-link">
-            <a href="state-helper.html">Using State Helper</a>
         </div>
     </div>
 
@@ -46,6 +42,7 @@
 
 <script type="text/javascript" src="../../bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script type="text/javascript" src="../../bower_components/angular-ui-router.stateHelper/statehelper.js"></script>
 <script type="text/javascript" src="app.js"></script>
 </body>
 
