--- a/app/state-manager/index.html
+++ b/app/state-manager/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <header>
-
+            <a href="../../index.html" class="home">
+                <img src="../images/home.svg" alt="Home"/>
+            </a>
             <h1>State Manager</h1>
             <nav>
                 <ul>
