--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
         <div class="btn-container">
             <a href="app/state-manager" class="btn btn-primary btn-block">State Manager</a>
-            <a href="" class="btn btn-primary btn-block">Nested State and Nested Views</a>
+            <a href="app/nested-state-views" class="btn btn-primary btn-block">Nested State and Nested Views</a>
             <a href="" class="btn btn-primary btn-block">Multiple Named Views</a>
             <a href="" class="btn btn-primary btn-block">URL Routing</a>
             <a href="" class="btn btn-primary btn-block">The Components</a>
