--- a/app/nested-state-views/state-helper.html
+++ b/app/nested-state-views/state-helper.html
@@ -15,7 +15,11 @@
         <h1>Nested States and Nested Views</h1>
         <nav>
             <ul>
-                <li><a href="#/home">Home</a></li>
+                <li><a ui-sref="parent">Parent</a></li>
+                <li><a ui-sref="child1">Child1</a></li>
+                <li><a ui-sref="child2">Child2</a></li>
+                <li><a ui-sref="child11">Child11</a></li>
+                <li><a ui-sref="child21">Child21</a></li>
 
             </ul>
         </nav>
