--- a/app/state-manager/activate.html
+++ b/app/state-manager/activate.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="#/home">Home</a></li>
                 <li><a href="" ui-sref="contact">Contact</a></li>
+                <li><a href="" ui-state="uiState">UIState</a></li>
                 <li><a href="" ng-click="goToAbout()">About</a></li>
             </ul>
         </nav>
@@ -43,7 +44,6 @@
 <script type="text/javascript" src="../../bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script type="text/javascript" src="activate.js"></script>
-<script type="text/javascript" src="controllers/activate.controller.js"></script>
 </body>
 
 
